--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "devStart": "concurrently \"tsc -w\" \" nodemon ./bin/www\""
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "concurrently": "^8.2.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.4",
     "express-validator": "^7.0.1",
+    "fluent-ffmpeg": "^2.1.2",
     "helmet": "^7.1.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.16",
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/http-errors": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.2",
