--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "~1.9.1",
     "pug": "^2.0.4",
     "rimraf": "^5.0.5",
+    "validator": "^13.11.0",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/http-errors": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.2",
+    "@types/validator": "^13.11.7",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
