--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "devStart": "concurrently \"tsc -w\" \" nodemon ./bin/www\""
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.462.0",
+    "@aws-sdk/s3-request-presigner": "^3.462.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "aws-sdk": "^2.1506.0",
     "concurrently": "^8.2.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
