--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "npm install && rimraf dist && tsc",
+    "build": "rimraf dist && tsc",
+    "prestart": "npm run build",
     "start": "node ./bin/www",
     "predevStart": "npm run build",
     "devStart": "concurrently \"tsc -w\" \" nodemon ./bin/www\""
